# prompt-extractor

./: INT -230 Openlink- SAP AP Invoice Integration System Requirements & Design.docx  INT-116 NextSys to Openlink Actualized Cargo Technical Requirements.cleaned.docx  INT-All Workday Integration System Requirements & Design (1).docx  README.md  app.py  hil.py  main.py  pyproject.toml  requirements.txt
